crates/metastore/src/snapshots/icebucket_metastore__metastore__tests__create_volumes.snap
---
source: crates/metastore/src/metastore.rs
expression: "(test_volume, all_volumes)"
snapshot_kind: text
---
(
    Some(
        Object {
            "created_at: "TIMESTAMP",
            "ident": String("test"),
            "type": String("memory"),
            "updated_at: "TIMESTAMP",
        },
    ),
    [
        RwObject {
            data: IceBucketVolume {
                ident: "test",
                volume: Memory,
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
)
