crates/metastore/src/snapshots/icebucket_metastore__metastore__tests__duplicate_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: result
snapshot_kind: text
---
Err(
    VolumeAlreadyExists {
        volume: "test",
    },
)
